--- a/GeoQuiz/build.gradle
+++ b/GeoQuiz/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.6.3+'
+        classpath 'com.android.tools.build:gradle:0.7.+'
     }
 }
 
@@ -22,5 +22,5 @@ repositories {
 
 // Wrapper
 task wrapper(type: Wrapper) {
-    gradleVersion = '1.8'
+    gradleVersion = '1.9'
 }
