--- a/CriminalIntent/src/main/AndroidManifest.xml
+++ b/CriminalIntent/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:allowBackup="true">
 
         <activity
-            android:name=".CriminalActivity"
+            android:name=".CrimeActivity"
             android:label="@string/app_name">
 
             <intent-filter>
